[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/dialog/dialog.gd" type="Script" id=1]
[ext_resource path="res://font/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/arrow/arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://gfx/chars/dizzy/idle.png" type="Texture" id=4]
[ext_resource path="res://gfx/chars/danny_saved_3x19.png" type="Texture" id=5]

[node name="dialog" type="Node2D"]
visible = false
z_index = 110
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 84.0
margin_bottom = 48.0
color = Color( 0.262745, 0.321569, 0.239216, 1 )

[node name="text" type="Label" parent="ColorRect"]
margin_top = 20.0
margin_right = 84.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = ExtResource( 2 )
align = 1
autowrap = true
clip_text = true
percent_visible = 0.0

[node name="spaker_name" type="Label" parent="ColorRect"]
margin_top = 4.0
margin_right = 84.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
custom_fonts/font = ExtResource( 2 )
text = "dizzy"

[node name="dizzy_avatar" type="Sprite" parent="ColorRect"]
position = Vector2( 72, 9 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 25, 19 )

[node name="danny_avatar" type="Sprite" parent="ColorRect"]
modulate = Color( 0.780392, 0.941176, 0.847059, 1 )
position = Vector2( 12, 10 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 24, 16 )

[node name="arrow" parent="." instance=ExtResource( 3 )]
visible = true
position = Vector2( 81, 44 )

[node name="Label" type="Label" parent="."]
margin_top = 12.0
margin_right = 84.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
custom_fonts/font = ExtResource( 2 )
text = "______________"
